[package]
name = "kclip-cli"
version = "0.4.2"
description = "A cross-platform CLI for accessing the system clipboard "
repository = "https://github.com/347Online/kclip-cli"
authors = ["Katie Janzen / 347Online"]
license = "GPL-3.0"

edition = "2024"
default-run = "kclip"

[dependencies]
anyhow = "1.0.100"
app-path = "1.1.2"
arboard = "3.6.1"
clap = { version = "4.5.48", features = ["cargo", "string"] }
symlink = "0.1.0"
